# chartbuddha

./: .editorconfig  .env  .env.constants  .gitignore  .prettierignore  .prettierrc  .vscodeignore  Api.tsx  CHANGELOG.md  LICENSE.md  README.md  eslint.config.js  index.css  index.html  package-lock.json  package.json  rustfmt.toml  splash.html  splashscreen.html  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: .taurignore  2  Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json  default.json5  desktop.json  desktop.json5  splash.json
src-tauri/src/: constants.rs  lib.rs  main.rs  setup.rs  stream_manager.rs  websocket_coordinator.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/coinbase/: coinbase_authenticator.rs  coinbase_subscriber.rs  mod.rs
src-tauri/src/apis/: mod.rs
src-tauri/src/apis/binance/: mod.rs
src-tauri/src/apis/coinbase/: authenticator.rs  authenticator_struct.rs  coinbase_authenticator.rs  coinbase_streams.rs  coinbase_subscriber.rs  coinbase_websocket.rs  mod.rs
src-tauri/src/app/: mod.rs  setup.rs
src-tauri/src/app/commands/: app_setup_complete.rs  cmd_app_setup.rs  coinbase_products_list.rs  coinbase_store_api_keys.rs  mod.rs  subscription_save.rs  websocket_cmd.rs
src-tauri/src/app/database/: database.rs  entity_subscription.rs  entity_ticker.rs  initialize_database.rs  mod.rs
src-tauri/src/app/db/: db.rs  db_subscriptions.rs  mod.rs
src-tauri/src/app/entities/: aggregated_volume.rs  app_subscriptions.rs  coinbase_ticker.rs  mod.rs  order_book.rs  subscriptions.rs  trades.rs
src-tauri/src/app/setup/: mod.rs  setup.rs  setup_database.rs  setup_store.rs
src-tauri/src/app/state/: app_state.rs  mod.rs  state_database.rs  state_setup.rs
src-tauri/src/app/store/: apis_defaults.rs  default_app_config.rs  default_list_api.rs  default_list_sub.rs  initialize_store.rs  mod.rs  settings_defaults.rs  store.rs  store_init.rs  store_manager.rs  store_subscription.rs  subscriptions_defaults.rs
src-tauri/src/app/streamer/: mod.rs  streamer.rs
src-tauri/src/app/streams/: init_streams.rs  mod.rs  streams.rs
src-tauri/src/app/structs/: mod.rs  subscription.rs
src-tauri/src/app/subscriber/: manage_subscription.rs  mod.rs  subscriber.rs  subscriber_cmds.rs
src-tauri/src/app/websocket/: init_ws.rs  mod.rs  websocket.rs  websocket_cmd.rs
src-tauri/src/app/window/: mod.rs
src-tauri/src/binance/: mod.rs
src-tauri/src/broker/: mod.rs
src-tauri/src/broker/coinbase/: coinbase_authenticator.rs  coinbase_subscriber.rs  mod.rs
src-tauri/src/coinbase/: authenticate_api_request.rs  coinbase_authenticator.rs  coinbase_setup.rs  coinbase_subscriber.rs  mod.rs
src-tauri/src/coinbase/api/: get_api_key_permissions.rs  get_market_trades.rs  get_product.rs  get_product_book.rs  get_product_candles.rs  get_public_market_trades.rs  get_public_product.rs  get_public_product_book.rs  get_public_product_candles.rs  get_server_time.rs  list_orders.rs  list_products.rs  list_public_products.rs  mod.rs
src-tauri/src/coinbase/apis/: mod.rs
src-tauri/src/coinbase/commands/: coinbase_api_save.rs  coinbase_authenticator.rs  coinbase_connect_api_save.rs  coinbase_get_selected_product.rs  coinbase_keys_test.rs  coinbase_list_products.rs  coinbase_product_list.rs  coinbase_save.rs  coinbase_subscribe.rs  coinbase_test_api.rs  mod.rs
src-tauri/src/coinbase/converts/: mod.rs
src-tauri/src/coinbase/data_api/: get_api_key_permissions.rs
src-tauri/src/coinbase/futures/: get_futures_position.rs  mod.rs
src-tauri/src/coinbase/orders/: edit_order.rs  mod.rs
src-tauri/src/coinbase/perpetuals/: mod.rs
src-tauri/src/coinbase/public/: get_public_product.rs  get_public_product_book.rs
src-tauri/src/coinbase/structs/: data_api.rs  error.rs  fees.rs  mod.rs  products.rs
src-tauri/src/commands/: coinbase_get_selected_product.rs  coinbase_list_products.rs  mod.rs
src-tauri/src/commands/coinbase/: authenticator.rs  coinbase_get_selected_product.rs  coinbase_keys_test.rs  coinbase_list_products.rs  coinbase_save_keys.rs  coinbase_test_api.rs  mod.rs
src-tauri/src/commands/connect/: coinbase_api_save.rs  coinbase_delete_keys.rs  coinbase_save_keys.rs  coinbase_store_api_keys.rs  mod.rs  providers_list.rs
src-tauri/src/commands/dashboard/: mod.rs
src-tauri/src/commands/subscribe/: mod.rs  (+4 more)
src-tauri/src/config/: app_config.rs  config_manager.rs  interface.rs  mod.rs  providers.rs  state.rs
src-tauri/src/connector/: connector.rs  mod.rs
src-tauri/src/db/: db.rs  db_subscriptions.rs  init_database.rs  initialize_db.rs  mod.rs
src-tauri/src/entities/: aggregated_volume_table.rs  mod.rs  orders_table.rs  subscriptions_table.rs
src-tauri/src/interface/: defaults_interface.rs  defaults_keys.rs  defaults_settings.rs  mod.rs
src-tauri/src/market/: mod.rs
src-tauri/src/models/: aggregated_volume_table.rs  mod.rs  orders_table.rs  subscriptions_table.rs  trades_table.rs
src-tauri/src/news/: mod.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/settings/: mod.rs  providers.rs
src-tauri/src/state/: app_state.rs  mod.rs
src-tauri/src/store/: mod.rs  store.rs  store_subscription.rs
src-tauri/src/stores/: init_stores.rs  initialize_stores.rs  mod.rs
src-tauri/src/streamer/: streamer.rs
src-tauri/src/streams/: init_streams.rs  mod.rs  streams_coordinator.rs
src-tauri/src/structs/: mod.rs
src-tauri/src/subscriber/: mod.rs  subscriber.rs
src-tauri/src/websocket/: mod.rs  websocket.rs  websocket_cmd.rs
src-tauri/src/ws/: init_ws.rs  initialize_ws.rs  mod.rs  ws_coordinator.rs
(+883 files in other folders)
