[package]
name = "chartbuddha"
version = "0.1.0"
description = "ChartBuddha"
authors = ["Darth Buddha"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chartbuddha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-log = "2"

# Async
async-trait = "0.1.83"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"

# Cryptography
jsonwebtoken = "9.3.0"
aes-gcm = "0.10.3"
rand = "0.8.5"

# JSON
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

# Logging
log = "0.4.22"

# WebSocket
futures-util = { version = "0.3.31" }
reqwest = { version = "0.12.9", features = ["json"] }
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
