[package]
name = "chartbuddha"
version = "0.1.0"
description = "ChartBuddha"
authors = ["Darth Buddha"]
license = ""
repository = "https://github.com/DarthBuddha/chartbuddha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chartbuddha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.2.4", features = ["config-json5"] }
# Tauri dependencies
tauri-plugin-shell = "2.2.0"
tauri-plugin-log = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-http = "2.2.0"
tauri-plugin-websocket = "2.2.1"
tauri-plugin-sql = { version = "2.2.0", features = ["postgres"] }
tauri-plugin-process = "2.2.0"

# Async
async-trait = "0.1.85"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"

# Cryptography
jsonwebtoken = "9.3.0"
aes-gcm = "0.10.3"
rand = "0.8.5"

# DataBase
sea-orm = { version = "1.1.4", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

# JSON
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

# Logging
log = "0.4.25"

# WebSocket
# openssl = "0.10"
# openssl-sys = "0.9"
futures-util = { version = "0.3.31" }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }

# Date and Time
chrono = { version = "0.4.39", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.2.1"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
